--- a/app/views/user/import_course.html.erb
+++ b/app/views/user/import_course.html.erb
@@ -1,7 +1,7 @@
 ﻿<div class="bs-callout bs-callout-info well">
 	<h2><%=fa_icon "upload"%>匯入歷年課程</h2>
 	<h4>
-	0.請注意!匯入前會將非本學期的課程先<strong>清空!</strong><br>
+	0.請注意!匯入前會所有課程先<strong>清空!</strong><br>
 	1.至註冊組 <%=link_to "學籍成績系統","https://regist.nctu.edu.tw/", target:"blank"%> 登入<br>
 	2.點選「歷年成績查詢」按鈕，如<%=link_to "此圖", asset_path("import_course_1.jpg"), target:"blank"%><br>
 	3.全選(ctrl+a)右方成績頁面的內容並複製(cltr+c)，如<%=link_to "此圖", asset_path("import_course_2.jpg"), target:"blank"%><br>
