--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,8 +23,7 @@
 		<%@sale_books.each do |sale_book| %>
 			<div class="col-md-4 col-sm-6">
 				<div href="/books/<%=sale_book.id%>" class="thumbnail clickable-hover" style="height:300px; margin-top:30px;" onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')" onclick="goToHref($(this).attr('href'));">					
-					
-					<%=image_tag sale_book.image_url,style:"height:170px;min-height:150px;"%>		
+					<%=sale_book.cover_image%>
 					<% if sale_book.status==1%>
 						<%=image_tag asset_path("soldout.png"),style:"position:absolute;z-index:10;top: 24px;left: 8px;"%>
 					<% end %>
@@ -46,17 +45,14 @@
 						</span>
 					</div>
 					<div class="supplemental-info" onmouseover="$(this).parent().attr('onclick','')" onmouseleave="$(this).parent().attr('onclick','goToHref($(this).attr(\'href\'));')">
-						<% user=sale_book.user %>	
-						<% if user.hasFb? %>
-							<%=image_tag "http://graph.facebook.com/#{user.uid}/picture",size:"25x25", style:"border-radius:3px;"%>
-						<% else %>
-							
-						<% end %>
-						<%=user.name%>
+						<% user=sale_book.user %>
+						<%=sale_book.user_avatar%>
+						<%=sale_book.user_name_with_tip%>
 						
 						<%=fa_icon "book"%> <strong><%=user.book_trade_infos.count%></strong>
-						<%=link_to fa_icon("pencil"), edit_book_path(sale_book) %>
-						
+						<% if user==current_user && sale_book.status==0%>
+							<%=link_to fa_icon("pencil"), edit_book_path(sale_book) %>
+						<% end %>
 						<strong class="pull-right" style="font-size:20px;">
 							<%=fa_icon "dollar" %> <%=sale_book.price%>
 						</strong>
