--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -62,11 +62,9 @@
 						<%=current_user.name%>
 					<% end %>
 					<ul class="dropdown-menu">
-					  <% if current_user.user_collections.count > 0%>
-              <li>
-                <a href="/user/collections">我的收藏</a>
-              </li>
-					  <% end %>
+            <li>
+              <a href="/user/collections">課表收藏</a>
+            </li>
 						<li>
 								<a href="/user/edit/">編輯個人資料</a>
 						</li>	
