--- a/app/views/user/share.html.erb
+++ b/app/views/user/share.html.erb
@@ -1,9 +1,10 @@
+<% canAddCollection = can_add_to_collection?(current_user, @user, @semester)%>
 <div class="well" style="background-color:white;"> 
   <h4 class="text-center"><%=@user.name%></h4> 
   <h4 class="text-center">
     <%=@user.department.ch_name%>
     <%=grade_on_user(@user, @semester)%>（<%=@semester.year%>）
-		<% if can_add_to_collection?(current_user, @user, params[:id]) %>
+		<% if canAddCollection %>
 			<%=link_to "加到我的收藏", "javascript:void(0);", :onclick=>'return record_collection($(this));'%> 
 		<% end %>	
   </h4> 
@@ -16,7 +17,7 @@
 			data.config = { popover: true, click_redirect: true };	
 			$table.CourseTable(data);	
 	});
-<% if can_add_to_collection?(current_user, @user, params[:id]) %>	
+<% if canAddCollection %>	
 	function record_collection($link){
 		var item = '<%=j params[:id]%>' ;
 		$.ajax({
@@ -24,7 +25,7 @@
 			url:"/user/update",
 			data: {type: "add_collection", item: item},
 			success: function(){
-				console.log("good");
+				toastr["success"]("已加入課表收藏");
 				$link.remove();
 			}
 		});
