--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,6 @@
 		box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 		
 	}
-	
 	.supplemental-info{
 		background: #f8f8f8;
 		//margin: 15px 0 0;
@@ -15,45 +14,79 @@
 		margin-right: -4px;
 		cursor :default;
 	}
-	
 </style>
+<br>
+
 <div class="container">
-	<%=link_to "我要賣書",new_book_path,class:"btn btn-info" %>
+	<%= search_form_for @q, url:"/books/", class:"form-inline" do |f| %>
+		<div class="row">	
+			<div class="col-md-12 text-center">
+				<%=link_to "我要賣書",new_book_path,class:"",style:"font-size:20px;" %>
+				<div class="input-group" style="width:450px;display:inline-table;">
+					<%=text_field_tag :custom_search,params[:custom_search], class: "form-control", placeholder:"書名/作者/課名" %>
+					<div class="input-group-btn">
+						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">找二手書 <span class="caret"></span></button>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="javascript:void(0);">找二手書</a></li>
+							<!--<li><a href="javascript:void(0);">找課程</a></li>-->
+						</ul>
+					</div><!-- /btn-group -->			
+					<div class="input-group-btn">			
+						<button type="submit" class="btn btn-primary" id="search"><%=fa_icon "search"%></button>        
+					</div><!-- /btn-group -->
+				</div><!-- /input-group -->
+				<!--
+				<div class="checkbox">
+					<label style="font-size:16px;">
+						<%=check_box_tag "adv_toggle",params[:adv_toggle],params[:adv_toggle],onchange: "$('#adv-search').toggleClass('hidden');" %>
+						進階搜尋
+					</label>
+				</div>
+				-->
+			</div>
+		</div>
+	<% end %>
   <div id="products" class="row">
 		<%@sale_books.each do |sale_book| %>
 			<div class="col-md-4 col-sm-6">
-				<div href="/books/<%=sale_book.id%>" class="thumbnail clickable-hover" style="height:300px; margin-top:30px;" onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')" onclick="goToHref($(this).attr('href'));">					
+				<div href="/books/<%=sale_book.id%>" class="thumbnail clickable-hover" style="height:293px; margin-top:30px;" onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')" onclick="goToHref($(this).attr('href'));">					
+					<div style="width:100%;position: absolute;" onmouseover="$(this).parent().attr('onclick','')" onmouseleave="$(this).parent().attr('onclick','goToHref($(this).attr(\'href\'));')">
+						<% if sale_book.user==current_user && sale_book.status==0%>
+							<%=link_to fa_icon("pencil"), edit_book_path(sale_book),class:"btn btn-sm btn-info" %>
+						<% end %>
+					</div>
 					<%=sale_book.cover_image%>
 					<% if sale_book.status==1%>
 						<%=image_tag asset_path("soldout.png"),style:"position:absolute;z-index:10;top: 24px;left: 8px;"%>
 					<% end %>
-					<div style="min-height:64px;margin-top:3px;padding-left:4px;" >
-						<div class="text-center" style="font-size:14px;">
-							<span data-toggle="tooltip" title="<%=sale_book.book_name%>">
-								<strong><%=sale_book.book_name.truncate(24)%></strong>
+					<div style="min-height:50px;margin-top:3px;padding-left:4px;" >
+						<div class="text-center" >
+							<span style="font-size:14px;">
+								<strong data-toggle="tooltip" title="<%=sale_book.book_name%>" >
+									<%=sale_book.book_name.truncate(15)%>					
+								</strong><br>
+								<strong>
+									作者:<%=sale_book.book.authors%>
+								</strong>
 							</span>
+							<p data-toggle="tooltip" style="margin-top:3px;" title="
+								<% sale_book.course_teacherships.each do |cts|%>
+									<%="#{cts.course_ch_name} #{cts.teacher_name}" %><br>
+								<% end %>">
+								<%="#{sale_book.course_teacherships.first.try(:course_ch_name)} #{sale_book.course_teacherships.first.try(:teacher_name)}" %><br>
+							</p>
 						</div>
-						<p data-toggle="tooltip" style="margin-top:5px;" title="
-							<% sale_book.course_teacherships.each do |cts|%>
-								<%="#{cts.course_ch_name} #{cts.teacher_name}" %><br>
-							<% end %>">
-							<%="#{sale_book.course_teacherships.first.try(:course_ch_name)} #{sale_book.course_teacherships.first.try(:teacher_name)}" %><br>
-						</p>
-						<span class="pull-right" style="font-size:16px;margin-top:-5px;">
-						<%=fa_icon "eye"%> <strong><%=sale_book.view_times%></strong>&nbsp;&nbsp;&nbsp;
-						<%=fa_icon "clock-o"%><%= time_ago_in_words(sale_book.created_at) %>
-						</span>
+						
+
 					</div>
 					<div class="supplemental-info" onmouseover="$(this).parent().attr('onclick','')" onmouseleave="$(this).parent().attr('onclick','goToHref($(this).attr(\'href\'));')">
 						<% user=sale_book.user %>
-						<%=sale_book.user_avatar%>
-						<%=sale_book.user_name_with_tip%>
+						<font color="#696969">
+							<%=user.name%>
+							<%=sale_book.created_at.strftime("%m/%d %H:%M")%>
+						</font>
 						
-						<%=fa_icon "book"%> <strong><%=user.book_trade_infos.count%></strong>
-						<% if user==current_user && sale_book.status==0%>
-							<%=link_to fa_icon("pencil"), edit_book_path(sale_book) %>
-						<% end %>
-						<strong class="pull-right" style="font-size:20px;">
+						<strong class="pull-right" style="font-size:20px;margin-top:-5px;">
 							<%=fa_icon "dollar" %> <%=sale_book.price%>
 						</strong>
 					</div>						
