fix shopping cart

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,7 +5,7 @@
 	<div class="row">	
 		<div class="col-md-12 text-center">
 			<div class="input-group" style="width:450px;display:inline-table;">
-				<%=text_field_tag :custom_search,params[:custom_search], class: "form-control", style:"/*width:250px;*/", placeholder:"課名/老師/時間/向度" %>
+				<%=text_field_tag :custom_search,params[:custom_search], class: "form-control", placeholder:"課名/老師/時間/向度" %>
 				<div class="input-group-btn">
 					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">找課程 <span class="caret"></span></button>
 					<ul class="dropdown-menu" role="menu">
@@ -14,7 +14,6 @@
 					</ul>
 				</div><!-- /btn-group -->			
 				<div class="input-group-btn">
-					
 					<button type="submit" class="btn btn-primary" id="search"><%=fa_icon "search"%></button>        
 				</div><!-- /btn-group -->
 			</div><!-- /input-group -->
@@ -24,7 +23,6 @@
 					進階搜尋
 				</label>
 			</div>
-			<!--<button class="btn btn-default" onclick="return false;"></a>-->
 		</div>
 	</div>
 	<div class="hidden row" id="adv-search">
@@ -53,6 +51,7 @@
 		<th class="col-md- text-cente">學分</th>
 		<th class="col-md- text-cente">時間</th>
 		<th class="col-md- text-cente">年級</th>
+		<th class="col-md- text-cente">收藏</th>
 	</tr>
 	<tbody>
 	<% if !@cds.empty? %>
@@ -69,8 +68,11 @@
 					<td class="text-cente"><%= cd.course_credit %></td>
 					<td class="text-cente"><%= cd.time %></td>
 					<td class="text-cente">
-							<%=cd.grade%>
-
+						<%=cd.grade%>
+					</td>
+					<td class="text-cente" onclick="">
+						<% type=session[:cd].present?&&session[:cd].include?(cd.id) ? "delete":"add" %>
+						<%=button_tag fa_icon(type=="add" ? "plus" :"minus"),class:"btn btn-sm #{type=="add" ? "btn-primary" : "btn-warning"} cart-control", data: type%>
 					</td>
 				</tr>
 		<% end %>
@@ -90,14 +92,28 @@
 
 <script>
 	$(function(){
-		//console.log("<%=j session.to_json.html_safe%>");
 		if($("#adv_toggle").prop("checked"))
 			$("#adv-search").removeClass("hidden");
 		$(".clickable-row").click(function() {
-
-				goToHref($(this).attr("href"));
+			goToHref($(this).attr("href"),false);
 		});
-		toastr["success"]("已更新到104上的課程囉!!!");
+		
+		//bind cart button 
+		$(".cart-control").bind({
+			mouseover:function(){// avoid go to course page
+				$(this).parent().parent().off("click");
+			},
+			mouseleave:function(){// resume go to course page
+				$(this).parent().parent().click(function(){
+					goToHref($(this).attr("href"),false);
+				});
+			},
+			click:function(){	//add or delete cart
+				add_to_cart($(this).parent().parent().attr("id"),$(this).attr("data"));
+				$(this).off("click");
+			}
+		});
+		//toastr["success"]("已更新到104上的課程囉!!!");
 		<% if !current_user %>
 
 		//	toastr["info"]("登入並選擇系級,系統即可為您推薦課程!!");
@@ -105,4 +121,5 @@
 		//	toastr["success"]("<%=j link_to "匯入成績","/user/import_course",style:"color:blue;"%>後系統即可為您推薦課程!!");
 		<% end %>
 	});
+
 </script>
