--- a/app/views/courses/search/_xtmpl_results_mini.html.erb
+++ b/app/views/courses/search/_xtmpl_results_mini.html.erb
@@ -55,7 +55,7 @@
 						</a>
 						{%= cd.dept_name %}
 						{%= cd.teacher_name %}
-						{% if(o.view_type=="schedule"){ %}
+						{% if(o.view_type=="simulation"){ %}
 							{% if(o.use_type=="add"){ %}
 								<button class="btn btn-success btn-circle pull-right" onclick="addCourseSimulation($(this), {%=cd.id%}, '{%=cd.time%}', 'add','search')">
 									<span class="glyphicon glyphicon-plus"></span>
@@ -67,7 +67,7 @@
 							{% } %}
 						{% }else if(o.view_type=="session"){ %}
 							{% if(o.use_type=="add"){ %}
-								<button class="btn btn-success btn-circle pull-right" onclick="add_class({%=cd.id%},'add','search')">
+								<button class="btn btn-success btn-circle pull-right" onclick="add_to_cart({%=cd.id%},'add')">
 									<span class="glyphicon glyphicon-plus"></span>
 								</button>
 							{% }else if(o.use_type=="delete"){ %}
