--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -49,16 +49,17 @@
   <div id="products" class="row">
 		<%@sale_books.each do |sale_book| %>
 			<div class="col-md-4 col-sm-6">
-				<div href="/books/<%=sale_book.id%>" class="thumbnail clickable-hover" style="height:293px; margin-top:30px;" onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')" onclick="goToHref($(this).attr('href'));">					
-					<div style="width:100%;position: absolute;" onmouseover="$(this).parent().attr('onclick','')" onmouseleave="$(this).parent().attr('onclick','goToHref($(this).attr(\'href\'));')">
+				<div id="book-<%=sale_book.id%>" href="/books/<%=sale_book.id%>" class="thumbnail clickable-hover" style="height:293px; margin-top:30px;" onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')" onclick="goToHref($(this).attr('href'),true);">					
+					<div id="control-bar" style="width:100%;position: absolute;" onmouseover="$(this).parent().attr('onclick','')" onmouseleave="$(this).parent().attr('onclick','goToHref($(this).attr(\'href\'));')">
 						<% if sale_book.user==current_user && sale_book.status==0%>
 							<%=link_to fa_icon("pencil"), edit_book_path(sale_book),class:"btn btn-sm btn-info" %>
+							<%=button_tag fa_icon("check"), class:"btn btn-sm btn-info",onclick:"setBookSaled(#{sale_book.id});" %>
 						<% end %>
 					</div>
 					<%=sale_book.cover_image%>
-					<% if sale_book.status==1%>
-						<%=image_tag asset_path("soldout.png"),style:"position:absolute;z-index:10;top: 24px;left: 8px;"%>
-					<% end %>
+
+						<%=image_tag asset_path("soldout.png"),class:sale_book.status==0 ? "hidden":"",style:"position:absolute;z-index:10;top: 24px;left: 8px;"%>
+
 					<div style="min-height:50px;margin-top:3px;padding-left:4px;" >
 						<div class="text-center" >
 							<span style="font-size:14px;">
@@ -98,4 +99,21 @@
 	$(function () {
 		$('[data-toggle="tooltip"]').tooltip({html:true,placement:"bottom"});
 	})
+	function setBookSaled(id){
+		if(!confirm("您確定將此本書設為已售出嗎?(設定完不可再做變更)"))
+			return false;
+		$.ajax({
+			type:"PATCH",
+			url:"/books/"+id,
+			data:{
+				"book_trade_info[status]":1
+			},
+			success:function(){
+				$("#book-"+id).find("#control-bar").remove();
+				$("#book-"+id).find("img.hidden").removeClass("hidden");
+			}
+			
+		});
+		
+	}
 </script>
