redirect old host & share v0.8

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,9 +33,12 @@
 
 				<li><a href="/courses/" rel="nofollow">全校課程</a></li>
 				<li><a href="/courses/simulation" rel="nofollow">模擬排課</a></li>
+				<li><a href="/user/" rel="nofollow">算學分</a></li>
+				<!--
 				<li><a href="/books/" rel="nofollow">二手書</a></li>
-				<!--<li><a href="/course_maps" rel="nofollow">課程地圖</a></li>-->
-				<!--<li><a href="/events/" rel="nofollow">talk</a></li>-->
+				<li><a href="/course_maps" rel="nofollow">課程地圖</a></li>
+				<li><a href="/events/" rel="nofollow">talk</a></li>
+				-->
 			
       </ul>
 			
