--- a/app/views/courses/_suggest_btns.html.erb
+++ b/app/views/courses/_suggest_btns.html.erb
@@ -1,45 +1,45 @@
 <table class="tabl col-md-offset-3" style="border:1px solid #ccc;">
 <tr class="" style="">
 	<td> 
-		<button data-content="空堂" class="btn btn-default" onclick="searchTimeSlot();">
+		<button data-content="空堂" class="btn btn-default pop-over" onclick="searchTimeSlot();">
 			<%=fa_icon "calendar 2x"%>
 		</button>
 	</td>
 	<td>
-		<button data-content="向度" class="btn btn-default" onclick="searchLackDimension();" style="padding:6px 7px;">
+		<button data-content="向度" class="btn btn-default pop-over" onclick="searchLackDimension();" style="padding:6px 7px;">
 			<%=fa_icon "graduation-cap 2x"%>
 		</button>
 	</td>
 	<td>
-		<button data-content="尚未開放" class="btn btn-default">
+		<button data-content="尚未開放" class="btn btn-default pop-over">
 			<%=fa_icon "heart-o 2x"%>
 		</button>
 	</td>
 	<td>
-		<button data-content="尚未開放" class="btn btn-default">
+		<button data-content="尚未開放" class="btn btn-default pop-over">
 			<%=fa_icon "users 2x"%>
 		</button>
 	</td>
 </tr>
 <tr class="">
 	<td>
-		<button data-content="尚未開放" class="btn btn-default" style="padding:6px 11px;">
+		<button data-content="尚未開放" class="btn btn-default pop-over" style="padding:6px 11px;">
 			<%=fa_icon "signal 2x"%>
 		</button>
 	</td>
 	<td>
-		<button data-content="尚未開放" class="btn btn-default">
+		<button data-content="尚未開放" class="btn btn-default pop-over">
 			<%=fa_icon "trophy 2x"%>
 		</button>	
 	</td>
 	<td>
-		<button data-content="尚未開放" class="btn btn-default" style="padding:6px 11px;">
+		<button data-content="尚未開放" class="btn btn-default pop-over" style="padding:6px 11px;">
 			<%=fa_icon "desktop 2x"%>
 		</button>
 		
 	</td>
 	<td>
-		<button data-content="尚未開放" class="btn btn-default">
+		<button data-content="尚未開放" class="btn btn-default pop-over">
 			<%=fa_icon "cogs 2x"%>
 		</button>
 	</td>
