--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
 	<div class="container" >
 		<p class="navbar-text pull-left footer-text">© 2014 NCTU<sup>+</sup><!--交大網頁及系統優化小組-->
 
-		<a href="/main/member_intro" rel="nofollow">關於我們</a>
+	<!--	<a href="/main/member_intro" rel="nofollow">關於我們</a> -->
 		<a href="https://www.facebook.com/nctuplus" style="margin-left:10px;" target="_blank">Contact Us</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;建議使用Chrome或FireFox瀏覽本站
 		
