--- a/app/views/user/collections.html.erb
+++ b/app/views/user/collections.html.erb
@@ -1,43 +1,86 @@
-<h3>我的收藏</h3>
+<h3 class="text-center">課表收藏</h3>
 
+<table class="table table-hover text-center bg-white">
+  <thead>
+    <tr class="row ">
+      <td>名稱</td>
+      <td>系所</td>
+      <td>年級</td>
+      <td>動作</td>
+    </tr>
+  </thead>
+  <tbody>
+    <% @collections.each do |c| %>
+    <% hashid = generate_share_hashid(c.target_id, c.semester_id) %>
+    <tr class="row ct-data" id="<%=hashid%>">
+      <td><%=c.name%></td>
+      <td><%=c.user.department.ch_name %></td>
+      <td><%=grade_on_user(c.user, c.semester)%>(<%=c.semester.year%>)</td>
+      <td>
+        <%=link_to "自訂名稱", "#", :class=>"edit-collection", "data-toggle"=>"modal", "data-target"=>".edit-collection-name"%>
+        <%=link_to "刪除", "javascript:void(0);", :class=>"delete-collection"%>
+      </td>
+    </tr>
+    <% end %>  
+  </tbody>
+</table>
 
-  <table class="table table-hover ">
-    <thead>
-      <tr class="row">
-        <th>名稱</th>
-        <th>系所</th>
-        <th>年級</th>
-        <th>動作</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @collections.each do |c| %>
-      <% hashid = generate_share_hashid(c.target_id, c.semester_id) %>
-      <tr class="row" href="<%=root_url%>shares/<%=hashid%>" id="<%=hashid%>">
-        <td class="clickable-hover clickable-row"><%=c.user.name%></td>
-        <td class="clickable-hover clickable-row"><%=c.user.department.ch_name %></td>
-        <td class="clickable-hover clickable-row"><%=grade_on_user(c.user, c.semester)%>(<%=c.semester.year%>)</td>
-        <td><%=link_to "刪除", "javascript:void(0);", :class=>"delete-collection"%></td>
-      </tr>
-      <% end %>  
-    </tbody>
-  </table>
+<div class="modal fade edit-collection-name" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"> 
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      </br>
+      <%=form_tag "/user/update", :method=>"POST", :class=>"form-inline text-center" do %>    
+        <div class="form-group">
+          <h3>編輯名稱</h3>
+          <%=text_field_tag :name, "", :class=>"form-control"%>
+          </br></br>
+          <%=submit_tag "送出", :class=>"btn btn-primary"%>  
+        </div>
+        </br>       
+        <%=hidden_field_tag :type, "edit_collection" %>
+        <%=hidden_field_tag :item, "" %>
+      <% end %>
+      </br>
+    </div>
+  </div>
+</div>
 
 <script>
-  $(".clickable-row").click(function() {
-   window.open( $(this).parent().attr("href") );
-	});
-  $('.delete-collection').click(function(){
-    var $this_tr = $(this).parent().parent() ;
-    $.ajax({
-			method: "post",
-			url:"/user/update",
-			data: {type: "delete_collection",
-			       item: $this_tr.attr('id')},
-			success: function(){
-				toastr["success"]("已刪除");
-				$this_tr.remove();
-			}
-		});
-  });
+  $( document ).ready(function(){
+    $(".ct-data").each(function(idx1){
+      var $tds = $(this).children('td');
+      var goto_url = "<%=root_url%>shares/"+$(this).attr('id');
+      var click_callback = function(){
+          window.open( goto_url );
+      };
+      $tds.each(function(idx2){
+        if(idx2 < $tds.length - 1 ){
+          $(this).click(click_callback) ; 
+          $(this).addClass('clickable-hover');
+        }
+      });
+    });
+
+    $('.delete-collection').click(function(){
+      var $this_tr = $(this).parent().parent() ;
+      $.ajax({
+        method: "post",
+        url:"/user/update",
+        data: {type: "delete_collection",
+               item: $this_tr.attr('id')},
+        success: function(){
+          toastr["success"]("已刪除");
+          $this_tr.remove();
+        }
+      });
+    });
+  
+    $('.edit-collection').click(function(){
+      var $target = $(this).parent().siblings().first();
+      $('.modal-content #name').val($target.html());
+      $('.modal-content #item').val($(this).parent().parent().attr('id'));
+    });
+
+  });//ready
+   
 </script>
