--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
 				<% end %>
 
 				<li><a href="/courses/" rel="nofollow">全校課程</a></li>
-				<li><a href="/courses/simulation" rel="nofollow">模擬排課</a></li>
+				<li><a href="/courses/simulation" rel="nofollow" data-no-turbolink>模擬排課</a></li>
 				<li><a href="/user/" rel="nofollow">算學分</a></li>
 				<!--
 				<li><a href="/books/" rel="nofollow">二手書</a></li>
