change share switch location & modify share fb title

--- a/app/views/courses/search/_xtmpl_results_mini.html.erb
+++ b/app/views/courses/search/_xtmpl_results_mini.html.erb
@@ -32,6 +32,9 @@
 				}		
 				if (from=="cart")
 					$("#shopping_cart_courses").load("/courses/show_cart");
+			<% if current_user.canShare? %>		
+				$('#schedule_table').CourseTable('renderImg', 'upload') ;	
+			<% end %>	
 			}	
 		});
 	}
