--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 	
 	<meta property="fb:app_id" content="<%=Facebook::APP_ID%>" />
 	<% if @fb_share_meta %>
-	  <meta property="og:title" content="<%=@user.name%>" ></meta>
-    <meta property="og:description" content="<%=@user.department.ch_name%> <%=@semester.name%> 課表" ></meta>
+	  <meta property="og:title" content="NCTU+分享課表" ></meta>
+    <meta property="og:description" content="<%=@user.name%> <%=@user.department.ch_name%> <%=@semester.name%>" ></meta>
     <meta property="og:url" content="<%=root_url%>shares/<%=params[:id]%>" ></meta>
     <meta property="og:image" content="<%=root_url%>course_table_shares/<%=@file_name%>"/>
   <% else %>
