--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
 
 				<li><a href="/courses/" rel="nofollow">全校課程</a></li>
 				<li><a href="/courses/simulation" rel="nofollow" data-no-turbolink>模擬排課</a></li>
-				<li><a href="/user/" rel="nofollow">算學分</a></li>
+				<li><a href="/user/?show_stat=true" rel="nofollow">算學分</a></li>
 				<!--
 				<li><a href="/books/" rel="nofollow">二手書</a></li>
 				<li><a href="/course_maps" rel="nofollow">課程地圖</a></li>
