--- a/app/views/course_maps/public/_xtmpl_course_table.html.erb
+++ b/app/views/course_maps/public/_xtmpl_course_table.html.erb
@@ -17,7 +17,7 @@
 	<h4>尚無資料!</h4>
 	{% } else{ %}
 		&nbsp;&nbsp;畢業學分:<strong>{%=cm.total_credit%}</strong>
-		<button class="btn btn-info" onclick="show_tip();">使用導覽</button>
+		<button class="btn btn-info" onclick="showTip();">使用導覽</button>
 		<a href="http://aadm.nctu.edu.tw/chcourse/class03.aspx?ftype=3" class="btn btn-primary" target="_blank">
 			<%=fa_icon "bookmark-o"%>必修科目表
 		</a>
