--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -82,7 +82,7 @@
 					</p>
 				</h2>	
 			</div>
-			<div class="well backgorund-color-grey " id="comments"></div>
+			<div class="well bg-grey " id="comments"></div>
 		<% if current_user %>	
 			<div class="row comment-form" >
 				<div class="col-sm-1"></div>
