--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -3,16 +3,23 @@
 
 <div class="row" style="">
 	<div class="col-md-5 col-md-offset-1">
-		<div class="panel panel-primary ">
-			<div class="panel-heading">
+		<div class="panel" >
+			<div class="panel-heading bg-fb">
 				<h4 class="text-center">
-					<button id="has-select-btn" class="btn btn-circle btn-info pull-left pop-over" data-content="已選課程" onclick="showHasSelected()" style="margin-top: -5px;">
-						<font color="white"><%=fa_icon "check"%></font>
-					</button>	
+					<span class="pull-left">
+						<button id="has-select-btn" class="btn btn-circle btn-info pop-over" data-content="已選課程" onclick="showHasSelected()" style="margin-top: -5px;">
+							<%=fa_icon "check"%>
+						</button>
+						<button id="shopping-cart" class="btn btn-circle btn-info pop-over" data-content="收藏課程" onclick="$('.scrollable').load('/courses/show_cart?view_type=simulation&use_type=add');" style="margin-top: -5px;">
+							<%=fa_icon "star"%>
+						</button>
+					</span>
 					課程查詢
-					<button id="shopping-cart" class="btn btn-circle btn-info pull-right pop-over" data-content="收藏課程" onclick="$('.scrollable').load('/courses/show_cart?view_type=simulation&use_type=add');" style="margin-top: -5px;">
-						<font color="white"><%=fa_icon "star"%></font>
-					</button>	
+					<span class="pull-right">
+						<button id="show-tips" class="btn btn-circle btn-info pop-over" data-content="使用提示" onclick="showTip();" style="margin-top: -5px;">
+							<%=fa_icon "question"%>
+						</button>
+					</span>
 				</h4>
 			</div>
 			<div class="panel-body">
@@ -31,7 +38,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;
 					<%= Semester::LAST.year.to_s + ((Semester::LAST.half==1) ? "上" : "下") %>       
 					<div class="btn-group pull-right header-button pop-over" data-content="匯出" >
-						<button type="button" class="btn btn-circle btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+						<button type="button" class="btn btn-circle btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false" id="export-table">
 							 <i class="fa fa-download"></i>
 						</button>
 						<ul class="dropdown-menu" role="menu">
@@ -61,14 +68,23 @@
 		請使用Enter鍵或滑鼠點擊灰色處觀看	
 		</p>
 	</li>
+	<li data-id="has-select-btn" data-button="Next">
+		<h4>已選課表</h4>
+		<p>點此察看目前的課程</p>
+	</li>
 	<li data-id="shopping-cart" data-button="Next">
 		<h4>收藏課程</h4>
 		<p>點此察看在「全校課程」中收藏的課程</p>
 	</li>
-	<li data-class="btn-success" data-button="Next">
+	<li data-id="copy-it-simu" data-button="Next">
+		<h4>分享課表</h4>
+		<p>複製您的課表連結給同學們<br>若貼在FB還帶有縮圖喔!!</p>
+	</li>
+	<li data-id="export-table" data-button="Next">
 		<h4>匯出課表</h4>
 		<p>匯出Excel格式或圖檔</p>
 	</li>
+	
 	<li data-id="sel-time-btn" data-button="Next">
 		<h4>推薦-空堂</h4>
 		<p>
@@ -104,7 +120,7 @@
 		$('#joyRideTipContent').joyride({
       autoStart : true,
       cookieMonster: true,           
-      cookieName: 'CourseSimulationTip', 
+      cookieName: '_CourseSimulationTip', 
       modal:true,
       expose: true
     });
