--- a/app/views/user/_xtmpl_list_by_sem.html.erb
+++ b/app/views/user/_xtmpl_list_by_sem.html.erb
@@ -7,7 +7,7 @@
 	{% for (var i=0, courses; courses=grouped[i]; i++) { %}
 		
 		{% var local_credits={};%}
-		<tr class="row fb-bg-color">
+		<tr class="row bg-fb">
 			<th colspan="2" class="col-md-12">
 				{%= courses[0].sem_name %}
 			</th>
