--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,9 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-      <a class="navbar-brand " href="/main/index" style="font-family:arial;">NCTU<sup>+</sup></a>
+      <a class="navbar-brand " href="/main/index" style="font-family:arial;">			
+				NCTU<sup>+</sup>
+			</a>
 
 		</div>
 
@@ -20,11 +22,11 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">管理<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 						<% if current_user.isAdmin? %>
-							<li><a href="/admin/users" rel="nofollow">使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
+							<li><a href="/admin/users" rel="nofollow" data-no-turbolink>使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
 						<% end %>
 							<li><a href="/departments" rel="nofollow">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
 							<li><a href="/admin/course_maps/" rel="nofollow">課程地圖</a></li>
-							<li><a href="/admin/user_statistics" rel="nofollow">新使用者統計</a></li>
+							<li><a href="/admin/user_statistics" rel="nofollow" data-no-turbolink>新使用者統計</a></li>
 							<!--<li><a href="/main/student_import" rel="nofollow">手動匯入</a></li>
 							<li><a href="/admin/ee104" rel="nofollow">電機104級畢業學分預審</a></li>-->							
 						</ul>	
